css bug reset and clear btns overflow hidden and auto.

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -94,6 +94,7 @@ nav .nav-block {
 						position: absolute;
 						min-width: 185px;
 						width: calc(100% - 60px);
+						width: calc(100% - 40px);
 						top: 120px;
 						min-height: 133px;
 						height: 167px;
