--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -60,7 +60,7 @@ nav {
 
 	.nav-block {
 		// overflow-y: auto;
-		overflow-x: hidden;
+		// overflow-x: hidden;
 		height: calc(100% - 115px);
 		width: 100%;
 		display: flex;
